Uncommented some code to fix issue where content was not spaced out as it was wrapped in a flex row with no horizontal spacing. It is now fixed with 3 pieces of content per row within the view-more-container

--- a/src/index.css
+++ b/src/index.css
@@ -177,11 +177,11 @@
     text-align: center;
 }
 
-/* .view-more-container > div {
+.view-more-container > div {
     width: 33%;
     padding-top: 15px;
     margin-top: 5px;
-} */
+}
 
 .view-more-genre{
     margin-bottom: 10px;
